base/static/base/css/base.css
#page-container {
  position: relative;
  min-height: 115vh;
}

#content-wrap {
  padding-bottom: 32rem;    /* Footer height */
}

#footer {
	position: absolute;
	z-index: 99999;
	bottom: 0;
	width: 100%;
	height: 32rem;            /* Footer height */
	background-color: #2A2A2A;
	color: white;
	padding-top: 5rem;
	padding-bottom: 1.5rem;
}
/* These three above allow the footer to be at the bottom of the page if there is not enugh content to fill the page */

body {
	font-family: 'Open Sans', sans-serif;
	font-size: 10px; /* my base font size, my entire site is designed to scale to this value */
}

a {
	color: inherit;
	text-decoration: none;
}

a:hover {
	color: #5FCA10;
	text-decoration: none;
}

#mainNav {
	position: fixed;
	border-bottom: 1px solid #EBEBEB;
	background-color: white;
}

.navbar-nav {
	padding-top:10%;
	padding-bottom:100%;
	width: 100%;
}

#mainNav .navbar-brand {

}

#mainNav .navbar-toggler {
	font-size: 3em;
	padding: 0.1rem;
	border: none;
	outline: none;
}

.navbar-toggler>.close {
    display:inline;
    font-size: 1.4em;
}

.navbar-toggler.collapsed>.close, .navbar-toggler:not(.collapsed)>.navbar-toggler-icon {
    display:none;
}

.navbar-toggler:hover {
	background-color: #EBEBEB;
}

#mainNav .nav-link {
	font-size: 3em;
	font-family: 'Nunito', sans-serif;
	color: black;
	text-align: center;
}

#mainNav .nav-link:hover {
	color: #47A600;
}

.navbar-nav > .nav-item{
    padding-top: 1.3rem;
    padding-bottom: 1.3rem;
    padding-left: 0.25rem;
    padding-right: 0.25rem;
}

.logo-nav {
	height: 2.5rem;
}
.logo-footer {
	height: 2.25rem;
	padding-bottom: 0.5rem;
}

#main-section {
	margin-top: 56px;
	background-color: #FFF;
}

#footer-links {
	font-size: 1.5em;
}

#footer-disclaimer {
	font-size: 1em;
	font-style: italic;
	color: #959595;
}

#footer-logo {
	font-size: 1.5em;
}

#footer-copyright {
	font-size: 1.25em;
}

#footer-disclaimer-links {
	font-size: .75em;
	color: #959595;
}

.media-icons {
	font-size: 1.65em;
}


@media screen and (min-width: 576px) {    }

@media screen and (min-width: 768px) {
	#main-section {margin-top: 48px;}
	.navbar-nav {padding-top:0;padding-bottom:0;}
	.navbar-nav > .nav-item {padding-top: 0.45rem;padding-bottom: 0.45rem;}
	#mainNav .nav-link {font-size: 1.7em;}
	.logo-nav {height: 2rem;}
	.logo-footer {height: 1rem;padding-bottom: 0rem;}
	#content-wrap {padding-bottom: 24rem/* Footer height */;}
	#footer {height: 24rem/* Footer height */;padding-top: 5rem;padding-bottom: 1.5rem;}

}

@media screen and (min-width: 992px) {
	.logo-footer {height: 1.4rem;}
}

@media screen and (min-width: 1200px) {    }

@media screen and (min-width: 1400px) {    }

@media screen and (min-width: 1600px) {    }

